# branching

./: Cargo.toml  README.md
branchanalyse/: Cargo.toml
branchanalyse/src/: all_traces.rs  gshare_history_range.rs  main.rs  run_all_predictors.rs
branchcli/: Cargo.toml
branchcli/src/: lib.rs  main.rs
branchlib/: Cargo.toml
branchlib/src/: lib.rs  predictor.rs  simulator.rs  strategies.rs
branchlib/src/strategies/: always.rs  gshare.rs  profiled.rs  twobit.rs
branchsim/: Cargo.toml
branchsim/src/: main.rs
