[package]
name = "branchanalyse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
branchlib = { path = "../branchlib" }
branchcli = { path = "../branchcli" }
clap = { version = "4.1.9", features = ["derive"] }
memmap2 = "0.5.10"
rayon = "1.7.0"
csv = "1.2.1"
serde = { version = "1", features = ["derive"] }